weporter motivation section

--- a/tex/bib/mybib.bib
+++ b/tex/bib/mybib.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Tue, 11 Sep 2012.
+%% Created using Papers on Fri, 14 Sep 2012.
 %% http://mekentosj.com/papers/
 
 @book{kosslyn1980image,
@@ -208,11 +208,48 @@ number = {2},
 pages = {321--329}
 }
 
+@article{Kuwano:2000wy,
+author = {Kuwano, H. and Taniguchi, Y. and Arai, H. and Mori, M. and Kurakake, S. and Kojima, H.},
+title = {{Telop-on-demand: Video structuring and retrieval based on text recognition}},
+journal = {Multimedia and Expo, 2000. ICME 2000. 2000 IEEE International Conference on},
+year = {2000},
+volume = {2},
+pages = {759--762 vol. 2}
+}
+
+@article{Bruno:2002tt,
+author = {Bruno, E. and Pellerin, D.},
+title = {{Video structuring, indexing and retrieval based on global motion wavelet coefficients}},
+journal = {Pattern Recognition, 2002. Proceedings. 16th International Conference on},
+year = {2002},
+volume = {3},
+pages = {287--290 vol. 3}
+}
+
 @book{kosslyn1983ghosts,
 author = {Kosslyn, S.M.},
 title = {{Ghosts in the mind's machine: creating and using images in the brain}},
 publisher = {Norton},
 year = {1983}
+}
+
+@book{jenkins2006convergence,
+author = {Jenkins, H.},
+title = {{Convergence Culture: Where Old and New Media Collide}},
+publisher = {NYU Press},
+year = {2006},
+series = {ACLS Humanities E-Book}
+}
+
+@article{vanVelsen:2009by,
+author = {van Velsen, Lex and Melenhorst, Mark},
+title = {{Incorporating user motivations to design for video tagging}},
+journal = {Interacting with Computers},
+year = {2009},
+volume = {21},
+number = {3},
+pages = {221--232},
+month = jul
 }
 
 @article{Anonymous:oAG9AR4I,
@@ -314,6 +351,16 @@ year = {2004},
 volume = {57},
 number = {1},
 pages = {145--175}
+}
+
+@article{Koprinska:2001tt,
+author = {Koprinska, I. and Carrato, S.},
+title = {{Temporal video segmentation: A survey}},
+journal = {Signal processing: Image communication},
+year = {2001},
+volume = {16},
+number = {5},
+pages = {477--500}
 }
 
 @book{kim2008physicalism,
@@ -527,6 +574,17 @@ publisher = {ACM Press},
 address = {New York, New York, USA}
 }
 
+@article{Jonsson:2011fh,
+author = {J{\"o}nsson, Anna Maria and {\"O}rnebring, Henrik},
+title = {{USER-GENERATED CONTENT AND THE NEWS}},
+journal = {Journalism Practice},
+year = {2011},
+volume = {5},
+number = {2},
+pages = {127--144},
+month = apr
+}
+
 @article{Nishimoto:2011jy,
 author = {Nishimoto, Shinji and Vu, An T and Naselaris, Thomas and Benjamini, Yuval and Bin Yu and Gallant, Jack L},
 title = {{Reconstructing Visual Experiences from Brain Activity Evoked by Natural Movies}},
@@ -534,6 +592,14 @@ journal = {Current Biology},
 year = {2011},
 pages = {1--6},
 month = sep
+}
+
+@article{Christel:2005td,
+author = {Christel, M.G. and Conescu, R.M.},
+title = {{Addressing the challenge of visual information access from digital image and video libraries}},
+journal = {Proceedings of the 5th ACM/IEEE-CS joint conference on Digital libraries},
+year = {2005},
+pages = {69--78}
 }
 
 @article{Kay:2008ca,
@@ -545,6 +611,22 @@ volume = {452},
 number = {7185},
 pages = {352--355},
 month = mar
+}
+
+@article{DeRooij:2007ua,
+author = {De Rooij, O. and Snoek, C G M and Worring, M},
+title = {{Query on demand video browsing}},
+journal = {Proceedings of the 15th international conference on Multimedia},
+year = {2007},
+pages = {811--814}
+}
+
+@article{Yang:2004tc,
+author = {Yang, M. and Wildemuth, B.M. and Marchionini, G.},
+title = {{The relative effectiveness of concept-based versus content-based video retrieval}},
+journal = {Proceedings of the 12th annual ACM international conference on Multimedia},
+year = {2004},
+pages = {368--371}
 }
 
 @article{Thomas:1999vv,
@@ -610,6 +692,24 @@ volume = {435},
 pages = {1036--1037}
 }
 
+@article{Rui:1998uj,
+author = {Rui, Y. and Huang, T.S. and Ortega, M. and Mehrotra, S.},
+title = {{Relevance feedback: A power tool for interactive content-based image retrieval}},
+journal = {Circuits and Systems for Video Technology, IEEE Transactions on},
+year = {1998},
+volume = {8},
+number = {5},
+pages = {644--655}
+}
+
+@article{DeRooij:2008ut,
+author = {De Rooij, O. and Snoek, C G M and Worring, M},
+title = {{Balancing thread based navigation for targeted video search}},
+journal = {Proceedings of the 2008 international conference on Content-based image and video retrieval},
+year = {2008},
+pages = {485--494}
+}
+
 @article{Reynolds:1987vm,
 author = {Reynolds, CW},
 title = {{Flocks, herds and schools: A distributed behavioral model}},
@@ -631,6 +731,14 @@ year = {1965},
 volume = {72},
 number = {2},
 pages = {111--118}
+}
+
+@article{Christel:2004wm,
+author = {Christel, M. and Moraveji, N.},
+title = {{Finding the right shots: assessing usability and performance of a digital video library interface}},
+journal = {Proceedings of the 12th annual ACM international conference on Multimedia},
+year = {2004},
+pages = {732--739}
 }
 
 @article{Ward:2000up,
@@ -674,13 +782,6 @@ pages = {1--9},
 month = nov
 }
 
-@article{Anonymous:AzaRU_z7,
-title = {{Churchland - the Ontological Problem ch2 (dualism)}},
-year = {2009},
-pages = {1--19},
-month = nov
-}
-
 @article{Anonymous:_rZoRJJY,
 title = {{Dennet - Where am I}},
 year = {2009},
@@ -695,11 +796,11 @@ pages = {1--11},
 month = jan
 }
 
-@article{Anonymous:Efl-QJf5,
-title = {{Clark - Connectionism}},
-year = {2009},
-pages = {1--11},
-month = nov
+@article{Anonymous:2-VNC6MG,
+title = {{the art of WatChinG databases}},
+year = {2008},
+pages = {1--3},
+month = oct
 }
 
 @article{Anonymous:itAhIpaD,
@@ -707,20 +808,6 @@ title = {{Turing - Computing Machinery and Intelligence}},
 year = {2009},
 pages = {1--3},
 month = nov
-}
-
-@article{Anonymous:mBaqKmtI,
-title = {{Clark, Chalmers - the Extended Mind}},
-year = {1999},
-pages = {1--13},
-month = apr
-}
-
-@article{Anonymous:2-VNC6MG,
-title = {{the art of WatChinG databases}},
-year = {2008},
-pages = {1--3},
-month = oct
 }
 
 @article{Jansen:2009cd,
@@ -814,6 +901,46 @@ address = {Harvard},
 month = oct
 }
 
+@article{Yang:2007vb,
+author = {Yang, B. and Mei, T. and Hua, X.S. and Yang, L. and Yang, S.Q. and Li, M.},
+title = {{Online video recommendation based on multimodal fusion and relevance feedback}},
+journal = {Proceedings of the 6th ACM international conference on Image and video retrieval},
+year = {2007},
+pages = {73--80}
+}
+
+@article{Sarwar:2001wa,
+author = {Sarwar, B. and Karypis, G. and Konstan, J. and Reidl, J.},
+title = {{Item-based collaborative filtering recommendation algorithms}},
+journal = {Proceedings of the 10th international conference on World Wide Web},
+year = {2001},
+pages = {285--295}
+}
+
+@article{Davidson:2010tu,
+author = {Davidson, J. and Liebald, B. and Liu, J. and Nandy, P. and Van Vleet, T. and Gargi, U. and Gupta, S. and He, Y. and Lambert, M. and Livingston, B.},
+title = {{The YouTube video recommendation system}},
+journal = {Proceedings of the fourth ACM conference on Recommender systems},
+year = {2010},
+pages = {293--296}
+}
+
+@article{Luo:2009tb,
+author = {Luo, H. and Fan, J. and Keim, D. and Satoh, S.},
+title = {{Personalized news video recommendation}},
+journal = {Advances in Multimedia Modeling},
+year = {2009},
+pages = {459--471}
+}
+
+@article{Zhou:2010ut,
+author = {Zhou, R. and Khemmarat, S. and Gao, L.},
+title = {{The impact of YouTube recommendation system on video views}},
+journal = {Proceedings of the 10th annual conference on Internet measurement},
+year = {2010},
+pages = {404--410}
+}
+
 @book{Kurzweil:2006vy,
 author = {Kurzweil, Ray},
 title = {{The Singularity Is Near}},
@@ -821,6 +948,22 @@ publisher = {Penguin Group USA},
 year = {2006},
 series = {When Humans Transcend Biology},
 month = sep
+}
+
+@article{Mei:2007wa,
+author = {Mei, T. and Yang, B. and Hua, X.S. and Yang, L. and Yang, S.Q. and Li, S.},
+title = {{VideoReach: an online video recommendation system}},
+journal = {Proceedings of the 30th annual international ACM SIGIR conference on Research and development in information retrieval},
+year = {2007},
+pages = {767--768}
+}
+
+@article{Xu:2008vb,
+author = {Xu, S. and Jiang, H. and Lau, F.},
+title = {{Personalized online document, image and video recommendation via commodity eye-tracking}},
+journal = {Proceedings of the 2008 ACM conference on Recommender systems},
+year = {2008},
+pages = {83--90}
 }
 
 @book{bloch2007aristotle,
@@ -990,15 +1133,6 @@ title = {{The language of new media (1st MIT Press pbk. ed.)}},
 author = {Manovich, Lev}
 }
 
-@inproceedings{Zsombori:2011iw,
-author = {Zsombori, Vilmos and Frantzis, Michael and Guimaraes, Rodrigo Laiola and Ursu, Marian Florin and Cesar, Pablo and Kegel, Ian and Craigie, Roland and Bulterman, Dick C A},
-title = {{Automatic generation of video narratives from shared UGC}},
-booktitle = {HT '11: Proceedings of the 22nd ACM conference on Hypertext and hypermedia},
-year = {2011},
-publisher = { ACM  Request Permissions},
-month = jun
-}
-
 @article{Dennett:1971uv,
 author = {Dennett, DC},
 title = {{Intentional systems}},
@@ -1041,6 +1175,20 @@ journal = {Communications of the ACM},
 year = {1978}
 }
 
+@article{Nguyen:1999tq,
+author = {Nguyen, H. and Haddawy, P.},
+title = {{The decision-theoretic interactive video advisor}},
+journal = {Proceedings of the Fifteenth conference on Uncertainty in artificial intelligence},
+year = {1999},
+pages = {494--501}
+}
+
+@article{Davenport:1996vd,
+author = {Davenport, G. and Tam{\'e}s, D.J.},
+title = {{Some assembly required: cinematic knowledge-based reconstruction of structured video sequences}},
+year = {1996}
+}
+
 @article{Dennett:vw,
 author = {Dennett, Daniel and Kinsbourne, Marcel},
 title = {{Time and the observer}}
@@ -1064,6 +1212,14 @@ number = {3},
 pages = {416--430}
 }
 
+@article{Resnick:1994wm,
+author = {Resnick, P. and Iacovou, N. and Suchak, M. and Bergstrom, P. and Riedl, J.},
+title = {{GroupLens: an open architecture for collaborative filtering of netnews}},
+journal = {Proceedings of the 1994 ACM conference on Computer supported cooperative work},
+year = {1994},
+pages = {175--186}
+}
+
 @article{ORegan:2001us,
 author = {O'Regan, J.K. and No{\"e}, A.},
 title = {{A sensorimotor account of vision and visual consciousness}},
@@ -1072,6 +1228,16 @@ year = {2001},
 volume = {24},
 number = {5},
 pages = {939--972}
+}
+
+@article{Adomavicius:2005tv,
+author = {Adomavicius, G. and Tuzhilin, A.},
+title = {{Toward the next generation of recommender systems: A survey of the state-of-the-art and possible extensions}},
+journal = {Knowledge and Data Engineering, IEEE Transactions on},
+year = {2005},
+volume = {17},
+number = {6},
+pages = {734--749}
 }
 
 @article{Amedi:2007gl,
@@ -1083,6 +1249,16 @@ volume = {10},
 number = {6},
 pages = {687--689},
 month = may
+}
+
+@article{Herlocker:2004vc,
+author = {Herlocker, J.L. and Konstan, J.A. and Terveen, L.G. and Riedl, J.T.},
+title = {{Evaluating collaborative filtering recommender systems}},
+journal = {ACM Transactions on Information Systems (TOIS)},
+year = {2004},
+volume = {22},
+number = {1},
+pages = {5--53}
 }
 
 @article{lewis1986plurality,
@@ -1109,12 +1285,63 @@ number = {6},
 pages = {723--748}
 }
 
+@article{Marlow:2006wp,
+author = {Marlow, C. and Naaman, M. and Boyd, D. and Davis, M.},
+title = {{HT06, tagging paper, taxonomy, Flickr, academic article, to read}},
+journal = {Proceedings of the seventeenth conference on Hypertext and hypermedia},
+year = {2006},
+pages = {31--40}
+}
+
+@article{Davenport:1993wi,
+author = {Davenport, G. and Halliday, M.D.},
+title = {{Digital cinema--an environment for multi-threaded stories}},
+year = {1993}
+}
+
+@article{Herlocker:1999wc,
+author = {Herlocker, J.L. and Konstan, J.A. and Borchers, A. and Riedl, J.},
+title = {{An algorithmic framework for performing collaborative filtering}},
+journal = {Proceedings of the 22nd annual international ACM SIGIR conference on Research and development in information retrieval},
+year = {1999},
+pages = {230--237}
+}
+
+@article{Chen:2004ta,
+author = {Chen, L. and Pu, P.},
+title = {{Survey of preference elicitation methods}},
+journal = {Swiss Federal Institute of Technology in Lausanne, Technical Report No. IC/200467},
+year = {2004}
+}
+
+@article{Services:2008wr,
+author = {Services, End User Computing},
+title = {{Proceedings Template - WORD}},
+year = {2008},
+pages = {1--10},
+month = aug
+}
+
 @book{bonabeau1999swarm,
 author = {Bonabeau, E. and Dorigo, M. and Theraulaz, G.},
 title = {{Swarm intelligence: from natural to artificial systems}},
 publisher = {Oxford University Press},
 year = {1999},
 series = {Santa Fe Institute studies in the sciences of complexity}
+}
+
+@article{Klippgen:1998vq,
+author = {Klippgen, W. and Little, T.D.C. and Ahanger, G. and Venkatesh, D.},
+title = {{The use of metadata for the rendering of personalized video delivery}},
+journal = {Multimedia Data Management-Using Metadata to Integrate and Apply Digital Media. New York: McGraw-Hill},
+year = {1998}
+}
+
+@article{Anonymous:mAlXvqFr,
+title = {{A short history of youtube}},
+year = {2011},
+pages = {1--26},
+month = sep
 }
 
 @inproceedings{springerlink:10.1007/978-3-642-58069-7_38,
@@ -1261,6 +1488,25 @@ year = {2012},
 month = jun
 }
 
+@article{Ulges:2009ua,
+author = {Ulges, A. and Koch, M. and Borth, D. and Breuel, T.M.},
+title = {{Tubetagger-youtube-based concept detection}},
+journal = {Data Mining Workshops, 2009. ICDMW'09. IEEE International Conference on},
+year = {2009},
+pages = {190--195}
+}
+
+@article{Hendler:2008go,
+author = {Hendler, James and Golbeck, Jennifer},
+title = {{Metcalfe's law, Web 2.0, and the Semantic Web}},
+journal = {Web Semantics: Science, Services and Agents on the World Wide Web},
+year = {2008},
+volume = {6},
+number = {1},
+pages = {14--20},
+month = feb
+}
+
 @article{Rodney:1989uf,
 author = {Brooks, Rodney and Flynn, Anita},
 title = {{Fast, Cheap and out of Control}},
@@ -1280,11 +1526,158 @@ number = {5025},
 pages = {1227}
 }
 
+@article{Chen:2010wu,
+author = {Chen, Zhineng and Cao, Juan and Song, Yicheng and Guo, Junbo and Zhang, Yongdong and Li, Jintao},
+title = {{Context-Oriented Web Video Tag Recommendation}},
+journal = {arXiv.org},
+year = {2010},
+volume = {cs.MM},
+month = mar
+}
+
+@article{Snoek:2009dq,
+author = {Snoek, Cees G M and Worring, Marcel},
+title = {{Concept-Based Video Retrieval}},
+journal = {Foundations and Trends{\textregistered} in Information Retrieval},
+year = {2009},
+volume = {2},
+number = {4},
+pages = {215--322}
+}
+
+@article{Tian:ha,
+author = {Tian, Qi and Tang, Jinhui and Worring, Marcel and Gatica-perez, Daniel},
+title = {{Learning Semantics From Multimedia Web Resources: An Introduction to the Special Issue}},
+journal = {IEEE Transactions on Multimedia},
+volume = {14},
+number = {4},
+pages = {949--950}
+}
+
+@article{Halvey:2007tz,
+author = {Halvey, M.J. and Keane, M.T.},
+title = {{Analysis of online video search and sharing}},
+journal = {Proceedings of the eighteenth conference on Hypertext and hypermedia},
+year = {2007},
+pages = {217--226}
+}
+
+@article{Anonymous:2008uq,
+title = {{10.1.1.150.7896}},
+year = {2008},
+pages = {1--10},
+month = apr
+}
+
+@article{Cheng:2007tc,
+author = {Cheng, X. and Dale, C. and Liu, J.},
+title = {{Understanding the characteristics of internet short video sharing: YouTube as a case study}},
+journal = {Arxiv preprint arXiv:0707.3670},
+year = {2007}
+}
+
+@article{Cha:2007ty,
+author = {Cha, M. and Kwak, H. and Rodriguez, P. and Ahn, Y.Y. and Moon, S.},
+title = {{I tube, you tube, everybody tubes: analyzing the world's largest user generated content video system}},
+journal = {Proceedings of the 7th ACM SIGCOMM conference on Internet measurement},
+year = {2007},
+pages = {1--14}
+}
+
+@article{Snoek:2006tt,
+author = {Snoek, C G M and Worring, M and Hauptmann, A.G.},
+title = {{Learning rich semantics from news video archives by style analysis}},
+journal = {ACM Transactions on Multimedia Computing, Communications, and Applications (TOMCCAP)},
+year = {2006},
+volume = {2},
+number = {2},
+pages = {91--108}
+}
+
+@article{Snoek:2005vt,
+author = {Snoek, C G M and Worring, M},
+title = {{Multimodal video indexing: A review of the state-of-the-art}},
+journal = {Multimedia Tools and Applications},
+year = {2005},
+volume = {25},
+number = {1},
+pages = {5--35}
+}
+
+@article{Snoek:jf,
+author = {Snoek, C G M and Huurnink, B and Hollink, L and de Rijke, M and Schreiber, G and Worring, M},
+title = {{Adding Semantics to Detectors for Video Retrieval}},
+journal = {IEEE Transactions on Multimedia},
+volume = {9},
+number = {5},
+pages = {975--986}
+}
+
+@article{Smeulders:2000tx,
+author = {Smeulders, A.W.M. and Worring, M and Santini, S. and Gupta, A. and Jain, R.},
+title = {{Content-based image retrieval at the end of the early years}},
+journal = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+year = {2000},
+volume = {22},
+number = {12},
+pages = {1349--1380}
+}
+
+@article{Hendler:2008goa,
+author = {Hendler, James and Golbeck, Jennifer},
+title = {{Metcalfe's law, Web 2.0, and the Semantic Web}},
+journal = {Web Semantics: Science, Services and Agents on the World Wide Web},
+year = {2008},
+volume = {6},
+number = {1},
+pages = {14--20},
+month = feb
+}
+
+@article{Smeaton:2008go,
+author = {Smeaton, Alan F and Wilkins, Peter and Worring, Marcel and de Rooij, Ork and Chua, Tat-Seng and Luan, Huanbo},
+title = {{Content-based video retrieval: Three example systems from TRECVid}},
+journal = {International Journal of Imaging Systems and Technology},
+year = {2008},
+volume = {18},
+number = {2-3},
+pages = {195--201},
+month = aug
+}
+
 @article{Yuen:2009vp,
 author = {Yuen, MC and Chen, LJ},
 title = {{A survey of human computation systems}},
 journal = {Computational Science and {\ldots}},
 year = {2009}
+}
+
+@article{Snoek:2006td,
+author = {Snoek, GGM and Worring, M and Geusebroek, J.M. and Koelma, D C and Seinstra, F.J. and Smeulders, A.W.M.},
+title = {{The semantic pathfinder: Using an authoring metaphor for generic multimedia indexing}},
+journal = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+year = {2006},
+volume = {28},
+number = {10},
+pages = {1678--1689}
+}
+
+@article{Baluja:2008wd,
+author = {Baluja, S. and Seth, R. and Sivakumar, D. and Jing, Y. and Yagnik, J. and Kumar, S. and Ravichandran, D. and Aly, M.},
+title = {{Video suggestion and discovery for youtube: taking random walks through the view graph}},
+journal = {Proceedings of the 17th international conference on World Wide Web},
+year = {2008},
+pages = {895--904}
+}
+
+@article{Hollink:2005ei,
+author = {Hollink, L and Nguyen, G P and Koelma, D C and Schreiber, A Th and Worring, M},
+title = {{Assessing user behaviour in news video retrieval}},
+journal = {IEE Proceedings - Vision, Image, and Signal Processing},
+year = {2005},
+volume = {152},
+number = {6},
+pages = {911}
 }
 
 @article{Anonymous:2012wu,
@@ -1407,6 +1800,20 @@ title = {{Discontinuous seam-carving for video retargeting}},
 journal = {Computer Vision and Pattern Recognition (CVPR), 2010 IEEE Conference on},
 year = {2010},
 pages = {569--576}
+}
+
+@article{Snoek:2009ud,
+author = {Snoek, C G M and Nedovic, V. and van Liempt, M. and van Balen, R. and Yan, F. and Tahir, MA and Mikolajczyk, K. and Kittler, J. and de Rijke, M and Geusebroek, JM},
+title = {{The MediaMill TRECVID 2008 semantic video search engine}},
+year = {2009}
+}
+
+@article{Smeaton:2006ww,
+author = {Smeaton, A.F. and Over, P. and Kraaij, W.},
+title = {{Evaluation campaigns and TRECVid}},
+journal = {Proceedings of the 8th ACM international workshop on Multimedia information retrieval},
+year = {2006},
+pages = {321--330}
 }
 
 @article{Kim:1982uo,
