--- a/tex/main/meaningfulComputation.tex
+++ b/tex/main/meaningfulComputation.tex
@@ -4,14 +4,16 @@
 \section{Forms of Meaning in Film and Video}
 
 \subsection{Meaning in Visuals}
-\cite{Bruno:2002tt}
+[Video structuring, indexing and retrieval based on global motion wavelet coefficients]\cite{Bruno:2002tt}
+
 
 \subsection{Meaning in Concept}
 \subsection{Meaning in Structure}
 [cite bordwell \& Thompson: analysis of context dependency]
 
 \subsection{Meaning in Annotations}
-\cite{Kuwano:2000wy}
+[Telop-on-demand: Video structuring and retrieval based on text recognition]\cite{Kuwano:2000wy}
+[Addressing the Challenge of Visual Information Access from Digital Image and Video Libraries]\cite{Christel:2005td}
 
 \section{Computational Undertakings of the Quest}
 
@@ -24,14 +26,15 @@ annotating
   Human-Driven Labeling
   Machine-Driven Labeling
 multimodal feature fusion
-  
+concept based
+content based [Relevance feedback: A power tool for interactive content-based image retrieval]\cite{Rui:1998uj}
+[The Relative Effectiveness of Concept-based Versus Content-based Video Retrieval]\cite{Yang:2004tc}
 
+[collaborative filtering] \url{http://en.wikipedia.org/wiki/Collaborative_filtering}
 
 \subsection{Indexing to enable search}
 Because visual data on it's own provides little machine-readable handles to search and find, repositories of multi-media content need to be index to enable search. Within the task of video indexing several approaches are taken 
 
 
-\section{collaborative filtering}
-Information filtering agents and collaborative filtering both
-attempt to alleviate information overload by identifying
-which items a user will find worthwhile.  I
+
+
