--- a/tex/main/storytelling.tex
+++ b/tex/main/storytelling.tex
@@ -2,6 +2,9 @@
 \label{ch:storytelling}
 \section{Symbolic approaches}
 \label{sec:symbolic}
+
+\cite{Vilmos:2011wv,RodrigoLaiolaGuimaraes:2011tl,Ursu:2009gc}
+
 \section{Statistic approaches}
 \label{sec:statistic}
 
