--- a/dissertation_main.tex
+++ b/dissertation_main.tex
@@ -18,7 +18,7 @@
 \pagenumbering{Alph}
 \input{./tex/title}
 \pagenumbering{arabic}
-\input{./tex/abstract}
+\input{./tex/abstract}§
 %\maketitle
 \tableofcontents
 \pagebreak
