--- a/tex/main/humanComputation.tex
+++ b/tex/main/humanComputation.tex
@@ -1,7 +1,47 @@
 \chapter{Human Computation towards Visual Meaning}
-\label{ch:Human Computation}
+\label{ch:humancomputation}
+
+In a recent survey paper, Quinn and Bederson present a taxonomy of Human computation systems\cite{Quinn:2011us}. They sketch out the trend of this new method for intelligent problem solving by the increase of academic papers featuring the term `human computation' and its relative `crowd-sourcing'. They summarise the myriad of definitions given in recent works by several different authors in two key points:
+
+\begin{itemize}
+  \item ``The problems fit  the general paradigm of computation, and as such might someday be solvable by computers."
+  \item ``The human participation is directed by the computational system of process"
+\end{itemize}
+
+The first point introduces an interesting question whether storytelling is a computable process.
+Turing envisioned in his seminal paper computing machinery and human intelligence from 1950 [?] that a computer program would be able to successfully play a game now known as the Turing Test. ...
+
+Quinn and Bederson further present a classification along six dimensions they see as the most salient distinguishing factors:
+
+[table of dimensions?]
+
 
 \subsection{The web as platform for creation}
 \label{sec:platform}
 Many media scholars have written about the role of the web [refs New Media Reader].
 Important trend of the web as platform of creation. In terms of video creation for example, the last few years have seen the development of online video editing tools and environments such as popcorn.js, WeVideo and Kaltura.
+
+
+
+\section{Deriving meaning from video via Human Factors}
+[Personalized online document, image and video recommendation via commodity eye-tracking]\cite{Xu:2008vb}
+
+[VideoReach: an online video recommendation system]\cite{Mei:2007wa}
+
+\section{collaborative filtering}
+
+The idea of using user's past interactions within a system hosting digital content for the filtering of items that might be of interest is not a new one and usually goes by the name of collaborative filtering. 
+Collaborative filtering can generally take two forms: User-based, Item-based
+
+Information filtering agents and collaborative filtering both
+attempt to alleviate information overload by identifying
+which items a user will find worthwhile.  I
+
+
+already happening at YouTube
+
+\section{A Characterisation of Human Computation Systems}
+\subsection{Purpose}
+\subsection{Motivation}
+\subsection{Task}
+
